--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "type-check": "tsc --noEmit",
     "socket": "node dist/socket-server.js",
     "socket:dev": "ts-node --skip-project socket-server.ts",
-    "build:socket": "tsc socket-server.ts --outDir dist --module commonjs --esModuleInterop --skipLibCheck"
+    "build:socket": "tsc socket-server.ts --outDir dist --module commonjs --esModuleInterop --skipLibCheck",
+    "seed": "ts-node prisma/seed_roles.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
